--- a/01-Einfuehrung_und_Installation/Vagrantfile
+++ b/01-Einfuehrung_und_Installation/Vagrantfile
@@ -34,7 +34,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "ansible" do |ansible|
     ansible.vm.box = "bento/debian-10"
     ansible.vm.hostname = "ansible"
-    ansible.vm.network :private_network, ip: "192.168.150.100"
+    ansible.vm.network :private_network, ip: "192.168.56.99"
     ansible.vm.provider "virtualbox" do |p|
       p.memory = "1024"
       p.cpus = "2"
@@ -45,7 +45,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "debian" do |debian|
     debian.vm.box = "bento/debian-10"
     debian.vm.hostname = "debian"
-    debian.vm.network :private_network, ip: "192.168.150.10"
+    debian.vm.network :private_network, ip: "192.168.56.10"
     debian.vm.provider "virtualbox" do |p|
       p.memory = "1024"
       p.cpus = "2"
@@ -53,21 +53,19 @@ Vagrant.configure("2") do |config|
     debian.vm.provision :shell, inline: $script, :args => "sudo"
   end
 
-  config.vm.define "centos" do |centos|
-    centos.vm.box = "bento/centos-8"
-    centos.vm.hostname = "centos"
-    centos.vm.network :private_network, ip: "192.168.150.20"
-    centos.vm.provider "virtualbox" do |p|
-      p.memory = "1024"
-      p.cpus = "2"
+  config.vm.define "rocky" do |rocky|
+    rocky.vm.box = "bento/rockylinux-8"
+    rocky.vm.hostname = "rocky"
+    rocky.vm.network :private_network, ip: "192.168.56.20"
+    rocky.vm.provider "virtualbox" do |p|
     end
-    centos.vm.provision :shell, inline: $script, :args => "su"
+    rocky.vm.provision :shell, inline: $script, :args => "sudu"
   end
 
   config.vm.define "suse" do |suse|
     suse.vm.box = "bento/opensuse-leap-15.1"
     suse.vm.hostname = "suse"
-    suse.vm.network :private_network, ip: "192.168.150.30"
+    suse.vm.network :private_network, ip: "192.168.56.30"
     suse.vm.provider "virtualbox" do |p|
       p.memory = "1024"
       p.cpus = "2"
@@ -78,7 +76,7 @@ Vagrant.configure("2") do |config|
   config.vm.define "ubuntu" do |ubuntu|
     ubuntu.vm.box = "bento/ubuntu-20.04"
     ubuntu.vm.hostname = "ubuntu"
-    ubuntu.vm.network :private_network, ip: "192.168.150.40"
+    ubuntu.vm.network :private_network, ip: "192.168.56.40"
     ubuntu.vm.provider "virtualbox" do |p|
       p.memory = "1024"
       p.cpus = "2"
